--- a/Scenery.html
+++ b/Scenery.html
@@ -52,12 +52,12 @@
 
     <section>
         <article>
-            <a href=""><img src="cantons.gif" width="400" height="300"  alt="Geography"> </a>
+            <a href="Geography.html"><img src="cantons.gif" width="400" height="300"  alt="Geography"> </a>
             <a href="Geography.html">Geography</a>
         </article>
 
         <article>
-            <a href=""><img src="happy-friends-switzerland-768x512.jpg" width="400" height="300" alt="Culture"> </a>
+            <a href="Swiss.html"><img src="happy-friends-switzerland-768x512.jpg" width="400" height="300" alt="Culture"> </a>
             <a href="Swiss.html">Culture</a>
         </article>
     </section>
