--- a/Swiss.html
+++ b/Swiss.html
@@ -56,12 +56,12 @@
 
     <section>
         <article>
-            <a href=""><img src="cantons.gif" width="400" height="300"  alt="Geography"> </a>
+            <a href="Geography.html"><img src="cantons.gif" width="400" height="300"  alt="Geography"> </a>
             <a href="Geography.html">Geography</a>
         </article>
 
         <article>
-            <a href=""><img src="Switzerland-village_1369729.jpg"  width="400" height="300" alt="Scenery"> </a>
+            <a href="Scenery.html"><img src="Switzerland-village_1369729.jpg"  width="400" height="300" alt="Scenery"> </a>
             <a href="Scenery.html">Scenery</a>
         </article>
     </section>
