--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
     <section>
         <article>
-            <a href=""><img src="cantons.gif" width="400" height="300"  alt="Geography"> </a>
+            <a href="Geography.html"><img src="cantons.gif" width="400" height="300"  alt="Geography"> </a>
             <a href="Geography.html">Geography</a>
         </article>
 
         <article>
-            <a href=""><img src="Switzerland-village_1369729.jpg"  width="400" height="300" alt="Scenery"> </a>
+            <a href="Scenery.html"><img src="Switzerland-village_1369729.jpg"  width="400" height="300" alt="Scenery"> </a>
             <a href="Scenery.html">Scenery</a>
         </article>
 
         <article>
-            <a href=""><img src="happy-friends-switzerland-768x512.jpg" width="400" height="300" alt="Culture"> </a>
+            <a href="Swiss.html"><img src="happy-friends-switzerland-768x512.jpg" width="400" height="300" alt="Culture"> </a>
             <a href="Swiss.html">Culture</a>
         </article>
     </section>
