--- a/Scenery.html
+++ b/Scenery.html
@@ -64,7 +64,7 @@
 
     <p>Copyright &#169; 2020</p>
     <p>
-        <blockquote> Discover with me!!!
+        <blockquote> Discovering with me!!!
                 <cite>&mdash; C.T.N</cite>
         </blockquote>
     </p>
