--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <div><p>Copyright &#169; 2020</p></div>
     <p>
-        <blockquote> Discover with me!!!
+        <blockquote> Discovering with me!!!
                 <cite>&mdash; C.T.N</cite>
         </blockquote>
     </p>
